[tool.poetry]
name = "repl_nix_2023Preseason"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
rev = "^0.1.1"
robotpy-ctre = "^2022.1.1"
robotpy-navx = "^2022.0.2"
wpilib = "^2022.4.1"
pyfrc = "^2022.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
